release_candidates/4.2.0/_sources/pwa.txt
*************************************
pSConfig Web Admin
*************************************

.. note:: BETA

pSConfig Web Admin (PWA) is a web-based UI for perfSONAR administrators to define and publish MeshConfig/pSConfig meshes, which automates tests executed by test nodes, and provides topology information to various services, such as MadDash.

In addition to providing a user-friendly interface for creating pSConfig/MeshConfig output to define meshes, PWA allows multiple users to collaborate on the configuration of testspecs, host groups, and configs. Users can be designated super-admins or normal users, depending on how much access they need. It is also possible to allow users to edit some meshes, but not others.

.. image:: images/pwa/pwa_install.png
   :target: images/pwa/pwa_install.png
    :width: 450px
   :alt: PWA UI Screenshot

Included with PWA is a publisher that allows users to download defined pSConfig/MeshConfig in JSON format.

.. image:: images/pwa/configjson.png
    :alt: MeshConfig JSON Screenshot
    :width: 450px

PWA leverages the perfSONAR Global Lookup Service to provide a list of hosts that administrators can select in PWA's host group editor. It supports adding new "ad-hoc" hosts manually. 

PWA can also load host information from a private `Simple Loookup Service <https://github.com/esnet/simple-lookup-service/wiki>`_ instance.

Guide
-------------------------
.. toctree::
   :maxdepth: 2

   pwa_docker_architecture
   pwa_install
   pwa_install_rpm
   pwa_install_docker
   pwa_configure
   pwa_docker_create
   pwa_docker_troubleshoot
   pwa_user_management
   pwa_userguide
   pwa_operation
   pwa_monitoring
   pwa_api

Please submit bug reports / feature request at `PWA Github Repo <http://github.com/perfsonar/psconfig-web/issues>`_
